--- a/Client/package.json
+++ b/Client/package.json
@@ -46,14 +46,15 @@
     "devDependencies": {
         "@types/mocha": "^5.2.7",
         "@types/restify": "7.2.12",
-        "@typescript-eslint/eslint-plugin": "^2.17.0",
-        "@typescript-eslint/parser": "^2.17.0",
+        "@typescript-eslint/eslint-plugin": "^3.0.2",
+        "@typescript-eslint/parser": "^3.0.2",
         "chai": "^4.2.0",
-        "eslint": "^6.8.0",
+        "eslint": "^7.1.0",
         "eslint-config-airbnb-typescript": "^6.3.1",
         "eslint-config-prettier": "^6.9.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.20.0",
         "mocha": "^6.2.2",
         "nodemon": "^1.19.4",
         "prettier": "^1.19.1",
