--- a/cloudformation_ga.yml
+++ b/cloudformation_ga.yml
@@ -125,7 +125,8 @@ Resources:
     Properties:
       ImageId: ami-02ccb28830b645a41
       InstanceType: t2.micro
-      SecurityGroupIds: [sg-0c55cafa4dc590925]
+      SecurityGroupIds:
+        - Ref: DeveloperSG
       KeyName:
         Ref: KeyPair
       UserData:
