--- a/cloudformation_ga.yml
+++ b/cloudformation_ga.yml
@@ -21,7 +21,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId:
-        - Ref: DeveloperVPC
+        Ref: DeveloperVPC
       CidrBlock: 10.0.0.0/16
   DeveloperSG:
     Type: AWS::EC2::SecurityGroup
