fix subnet type

--- a/cloudformation_ga.yml
+++ b/cloudformation_ga.yml
@@ -135,7 +135,7 @@ Resources:
         - AssociatePublicIpAddress: True
           DeviceIndex: 0
           SubnetId:
-            - Ref: DeveloperSubnet
+            Ref: DeveloperSubnet
           GroupSet:
             - Ref: DeveloperSG
       KeyName:
